<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lost and Found</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="home">Home</string>
    <string name="add_item">Add Item</string>
    <string name="profile">Profile</string>
    <string name="item_title">Item Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="contact_email">Contact Email (Optional)</string>
    <string name="select_image">Select Image</string>
    <string name="submit">Submit</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="logout">Logout</string>
    <string name="my_items">My Items</string>
    <string name="no_items_found">No items found</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="claimed">Claimed</string>
    <string name="active_items">Active Items</string>
    <string name="archived_items">Archived Items</string>
    <string name="no_archived_items_found">No archived items found</string>
    <string name="edit_item">Edit Item</string>
    <string name="update_item">Update Item</string>
</resources>